--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
@@ -56,7 +56,13 @@
                                 <a class="nav-link" href="/logout">Logout</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/editProfile">Logout</a>
+                                <a class="nav-link" href="/editProfile">edit profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/actorlist">All actors</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/directorlist">All directors</a>
                             </li>
 
 
