--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/editProfile.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/editProfile.ejs
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>My Movie List</title>
+    <title>Users profile</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -12,111 +13,110 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
+
+    </style>
+
 </head>
+
 <body>
+<%- include('../partials/header.ejs') %>
 
-    <%- include('../partials/header.ejs') %>
-    <div class="container">
-        <h1 style="color: #EFFC20">Register</h1>
-        <form action="/editProfile" method="post" autocomplete="on">
-            <!--First name-->
-            <div class="box">
-                <label for="username" class="fl fontLabel"> Username: </label>
-                <div class="fr">
-                    <input type="text" name="username" placeholder="username"
-                           class="textBox" autofocus="on" required>
+<div class="row">
+    <div class="col-3">
+        <div class="shadow mt-3 p-2">
+            <div class="row no-gutters">
+                <div class="col-3">
+
+                    <img class="circular" src="<%=user.Picture%>" width="50">
                 </div>
-                <div class="clr"></div>
-            </div>
-            <!--First name-->
-            <div class="box">
-                <label for="FirstName" class="fl fontLabel"> First Name: </label>
-                <div class="fr">
-                    <input type="text" name="FirstName" placeholder="Firstname"
-                           class="textBox" autofocus="on" required>
+                <div class="col-9">
+                    <span>Hello</span>
+                    <h5><%=user.Username%></h5>
                 </div>
-                <div class="clr"></div>
             </div>
-
-            <!--Second name-->
-            <div class="box">
-                <label for="LastName" class="fl fontLabel"> Second Name: </label>
-                <div class="fr">
-                    <input type="text" required name="LastName"
-                           placeholder="Last Name" class="textBox">
-                </div>
-                <div class="clr"></div>
+        </div>
+        <div class="shadow mt-3 p-2">
+            <div class="list-group list-group-flush">
+                <a href="/my-section/profile" class="list-group-item list-group-item-action active" aria-current="true">My Account</a>
+                <a href="/my-section/orders" class="list-group-item list-group-item-action ">My Orders</a>
+                <!--                <a href="#" class="list-group-item list-group-item-action">My Lists</a>-->
+                <a href="/my-section/wishlist" class="list-group-item list-group-item-action">My Wishlist</a>
+                <a href="/my-section/reviews" class="list-group-item list-group-item-action">My Ratings and Reviews</a>
             </div>
-            <!--Second name-->
-
-
-            <!---Phone No.------>
-            <div class="box">
-                <label for="Bio" class="fl fontLabel"> Bio: </label>
-                <div class="fr">
-                    <input type="text" required name="Bio"
-                           placeholder="Bio" class="textBox">
-                </div>
-                <div class="clr"></div>
-            </div>
-            <!---Phone No.---->
-
-
-            <!---Email ID---->
-            <div class="box">
-                <label for="email" class="fl fontLabel"> Email ID: </label>
-                <div class="fr">
-                    <input type="email" required name="email" placeholder="Email Id" class="textBox">
-                </div>
-                <div class="clr"></div>
-            </div>
-            <!--Email ID----->
-
-
-            <!---Password------>
-            <div class="box">
-                <label for="password" class="fl fontLabel"> Password: </label>
-                <div class="fr">
-                    <input type="Password" required name="password" placeholder="Password" class="textBox">
-                </div>
-                <div class="clr"></div>
-            </div>
-            <!---Password---->
-
-            <!---Credit Card No------>
-            <div class="box">
-                <label for="credit" class="fl fontLabel"> Credit Card No </label>
-                <div class="fr">
-                    <input type="text" required name="creditcard" placeholder="Credit card No" class="textBox">
-                </div>
-                <div class="clr"></div>
-            </div>
-            <!---Credit Card No---->
-
-            <!---Gender----->
-            <div class="box radio">
-                <label for="gender" class="fl fontLabel"> Gender: </label>
-                <input type="radio" name="Gender" value="Male" required> Male &nbsp; &nbsp; &nbsp; &nbsp;
-                <input type="radio" name="Gender" value="Female" required> Female
-            </div>
-            <!---Gender--->
-
-
-            <!--Terms and Conditions------>
-            <div class="box terms">
-                <input type="checkbox" name="Terms" required> &nbsp; I accept the terms and conditions
-            </div>
-            <!--Terms and Conditions------>
-
-
-
-            <!---Submit Button------>
-            <div class="box" style="background: #000000; text-align: center; ">
-                <input type="Submit" name="Submit" class="submit" value="Register"  >
-            </div>
-            <!---Submit Button----->
-        </form>
+        </div>
     </div>
+    <div class="col-9">
+        <div class="shadow p-3 mt-3 d-flex justify-content-between">
 
+            <h3>Profile</h3>
+            <!--            <a class="btn btn-outline-primary ms-2" href="/my-section/profile/edit">Edit Profile</a>-->
+
+
+        </div>
+        <section class="shadow mt-3 p-3">
+            <h3>Personal Information</h3>
+            <hr>
+            <form action="/editprofile" method="post">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="mb-3">
+                            <label for="floatingInput">UserName</label>
+                            <input required type="text" name="username" value="<%= user.Username %>" class="form-control"
+                                   id="floatingInput" placeholder="Jon Doe">
+
+                        </div>
+                        <div class="mb-3">
+                            <label for="floatingInput">Bio</label>
+                            <input required type="text" name="bio" value="<%= user.Bio %>" class="form-control"
+                                   id="floatingInput" placeholder="Bio">
+
+                        </div>
+                        <div class="mb-3">
+                            <label for="floatingInput"> First Name</label>
+                            <input required type="text" name="firstname" value="<%= user.First_Name %>" class="form-control"
+                                   id="floatingInput" placeholder="First_Name">
+
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="floatingInput">Last Name</label>
+                            <input required type="text" name="lastname" value="<%= user.Last_Name %>" class="form-control"
+                                   id="floatingInput" placeholder="LAST_NAME">
+
+                        </div>
+                        <div class="mb-3">
+                            <label for="dob" class="form-label pb-1">Your Date of Birth</label>
+                            <input type="date" name="dob" value="<%= user.Date_of_birth %>"
+                                   class="form-control personal p-3 date-of-birth">
+                        </div>
+
+                    </div>
+                </div>
+                <hr>
+                <h3>Contact Information</h3>
+                <div class="row">
+
+                    <div class="col-6">
+                        <div class="mb-3">
+                            <label for="floatingInput">Email address</label>
+                            <input  type="email" name="email" value="<%= user.Email %>" class="form-control"
+                                   id="floatingInput" placeholder="name@example.com">
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <h3>Profile Picture</h3>
+                <div class="row ">
+                    <div class="col-2">
+                        <img class="img-fluid circular" src="<%=user.Picture%>">
+                    </div>
+
+                </div>
+                <hr>
+                <button class="btn btn-warning" type="submit">Save Profile</button>
+            </form>
+        </section>
+    </div>
+</div>
 </body>
 </html>
