--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="col text-right">
-                        <a class="forget-password-link" href="#">Forgot
+                        <a class="forget-password-link" href="editProfile/updatepassword">Forgot
                             Password?</a>
                     </div>
                 </div>
