--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/review.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/review.ejs
@@ -6,6 +6,15 @@
     <title> My Movie List</title>
 
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <title>My Movie List</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 
 <body>
@@ -13,90 +22,90 @@
 <div class="reviews">
     <%- include('../partials/header.ejs') %>
 
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
+<%console.log(userreview)%>
+    <%for(i=0;i<userreview.length;i++){%>
+    <div class="container">
+        <div class="col-md-5">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <section class="post-heading">
+                        <div class="row">
+                            <div class="col-md-11">
+                                <div class="media">
+                                    <div class="media-left">
+                                        <a href="#">
+                                            <img class="media-object photo-profile" src="http://0.gravatar.com/avatar/38d618563e55e6082adf4c8f8c13f3e4?s=40&d=mm&r=g" width="40" height="40" alt="...">
+                                        </a>
 
+
+                                    </div>
+                                    <div class="media-body">
+                                        <a href="#" class="anchor-username"><h4 class="media-heading"><%=userreview[i].Username%></h4></a>
+                                        <a href="#" class="anchor-time">51 mins</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <a href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="post-body">
+                        <p><%=userreview[i].Content%></p>
+                    </section>
+                    <section class="post-footer">
+                        <hr>
+                        <div class="post-footer-option container">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a href=<%="/review/"+userreview[i].Review_id+"/details"%> class="btn-warning">
+                                        <i class="bi bi-book-half"></i>
+                                        VIEW Review
+                                    </a>
+                                </li>
+                                <li>
+                                    <form class="Review" method="post" action=<%="/review/"+userreview[i].Review_id+"/details1"%> >
+                                        <button class="btn btn-secondary my-2 my-sm-0" type="submit"> vote</button>
+
+                                    </form>
+                                    <form class="Review" method="post" action=<%="/review/"+userreview[i].Review_id+"/details2" %> >
+                                        <button class="btn btn-secondary my-2 my-sm-0" type="submit"> Unvote</button>
+
+                                    </form>
+                            </li>
+
+                            </ul>
+                        </div>
+                        <div class="post-footer-comment-wrapper">
+                            <div class="comment-form">
+
+                            </div>
+                            <div class="comment">
+                                <div class="media">
+                                    <div class="media-left">
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <%}%>
 
     <!--<p style="font-weight: bolder; color: rgb(64, 64, 124);">
         Reviews for
     </p>-->
-    <div>
 
-    </div>
-    <div  style="padding-left: 40%">
-
-        <button class="open-review btn btn-secondary my-2 my-sm-0" onclick="openReview()" style="background-color: #4e4ed3; color: black; margin-top: 30px"> Write/Edit review</button>
-        <br>
-        <br>
-
-        <div class="review-edit" id="myReview">
-            <form class="Review" method="post" action=<%="/review" %> >
-                                    <textarea id="text" name="reviewContent" rows="5"
-                                              cols="50"><%= userReviewContent %></textarea>
-                <input type="hidden" name="username" value=<%=username %> >
-
-                <br>
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit" style="background-color: #4e4ee5; margin-bottom: 20px; color: black"> Post </button>
-            </form>
-        </div>
-
-
-        <% if(!allUserReview || allUserReview.length==0) { %>
-            <p>No result found</p>
-        <% } else { %>
-            <% for (var i = 0; i < allUserReview.length; i++){ %>
-                <ul style="font-size: large; font-family: cursive; color: black;">
-                    <div class="card" style="width: 18rem; background-color: #4e4ed3; margin-left: 50px; margin-top: 10px;">
-                        <div class="card-body">
-                            <%= allUserReview[i].Review_id + ". " + allUserReview[i].Content%>
-                        </div>
-                    </div>
-                    <a href=<%="/review/"+allUserReview[i].Review_id+"/details"%> class="btn-warning">
-                        <i class="bi bi-book-half"></i>
-                        VIEW Review
-                    </a>
-                    <button metclass="btn btn-secondary my-2 my-sm-0" style="color: black; background-color: #4e4ee5; margin-bottom: 10px; margin-left: 50px"> Nice! </button>
-                    <button class="btn btn-secondary my-2 my-sm-0" style=" color: black; background-color: #4e4ee5; margin-bottom: 10px; margin-left: 155px"> Nope </button>
-                </ul>
-            <% } %>
-        <% } %>
-    </div>
 </div>
-<script>
-    var a = 0;
-    function openReview() {
-        if (a == 1) {
-            document.getElementById("myReview").style.display = "none";
-            return a = 0;
-        } else {
-            document.getElementById("myReview").style.display = "block";
-            return a = 1;
-        }
-    }
-    var b = 0
-    function openVoteForm() {
-        if (b == 1) {
-            document.getElementById("vote").style.display = "none";
-            return b = 0;
-        } else {
-            document.getElementById("vote").style.display = "block";
-            return b = 1;
-        }
-    }
-    function removeReview() {
-        return confirm("your review will be deleted");
-    }
-    document.getElementById("vote").addEventListener("click", vote);
-    var a = 1;
-    function vote() {
-        if (a == 1) {
-            document.getElementById("in").value = parseInt(document.getElementById("in").value) + 1;
-            return a = 0;
-        }
-        else {
-            document.getElementById("in").value = parseInt(document.getElementById("in").value) - 1;
-            return a = 1;
-        }
-    }
-</script>
 <%- include('../partials/footer.ejs') %>
 </body>
 
