--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singlereview.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singlereview.ejs
@@ -15,22 +15,77 @@
 <body>
 <div class="main-content">
     <%- include('../partials/header.ejs') %>
+    <div class="container">
+        <div class="col-md-5">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <section class="post-heading">
+                        <div class="row">
+                            <div class="col-md-11">
+                                <div class="media">
+                                    <div class="media-left">
+                                        <a href="#">
+                                            <img class="media-object photo-profile" src="http://0.gravatar.com/avatar/38d618563e55e6082adf4c8f8c13f3e4?s=40&d=mm&r=g" width="40" height="40" alt="...">
+                                        </a>
+
+
+                                    </div>
+                                    <div class="media-body">
+                                        <a href="#" class="anchor-username"><h4 class="media-heading"><%=myreview.Username%></h4></a>
+                                        <a href="#" class="anchor-time">51 mins</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <a href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="post-body">
+                        <p><%=myreview.Content%></p>
+                    </section>
+                    <section class="post-footer">
+                        <hr>
+                        <div class="post-footer-option container">
+                            <ul class="list-unstyled">
+
+                                <li>
+                                    <form class="Review" method="post" action=<%="/review/"+myreview.Review_id+"/details1"%> >
+                                        <button class="btn btn-secondary my-2 my-sm-0" type="submit"> vote</button>
+
+                                    </form>
+                                    <form class="Review" method="post" action=<%="/review/"+myreview.Review_id+"/details2" %> >
+                                        <button class="btn btn-secondary my-2 my-sm-0" type="submit"> Unvote</button>
+
+                                    </form>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="post-footer-comment-wrapper">
+                            <div class="comment-form">
+
+                            </div>
+                            <div class="comment">
+                                <div class="media">
+                                    <div class="media-left">
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
 </body>
+
 <p>
-    <%= myreview.Content%>
-
-<form class="Review" method="post" action=<%="/review/"+myreview.Review_id+"/details1" %> >
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit"> vote</button>
-
-</form>
-<form class="Review" method="post" action=<%="/review/"+myreview.Review_id+"/details2" %> >
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit"> Unvote</button>
-
-</form>
-</p>
-<p>
-    <%console.log(myreview.Votes)%>
+    <%console.log(totalvotes.CNT)%>
     vote count :<%=myreview.Votes%>
 </p>
 </html>
