--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet" href="/css/award.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 
@@ -29,7 +30,7 @@
     <h6>(Showing )</h6>
     <div class="d-flex flex-wrap justify-content-evenly">
         <% for(let i = 0;i < moviesList.length;i++){ %>
-            <div class="card mb-1 m-1" style="width: 12rem;">
+            <div class="card mb-1 m-1" style="width: 15rem;">
                 <img class="card-img-top p-3" src=<%= moviesList[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
