--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Awards.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Awards.ejs
@@ -25,13 +25,13 @@
 
     <div class="d-flex flex-wrap justify-content-evenly">
         <% for(let i = 0;i < awards.length;i++){ %>
-            <div class="card mb-1 m-1" style="width: 12rem;">
+            <div class="card mb-1 m-1" style="width: 15rem;">
                 <img class="card-img-top p-3" src=<%= awards[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
                     <p style="color: #266dd3;font-weight: 650; font-size: 24px;" class="card-title"><%= awards[i].Award_name %></p>
                     <div>
-                        <p><%= awards[i].Details %></p>
+                        <p style="font-family: cursive;"><%= awards[i].Details %></p>
                     </div>
                 </div>
             </div>
