--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Merchandise.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Merchandise.ejs
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="/css/award.css">
 </head>
 </html>
 
@@ -23,7 +24,7 @@
     </nav>
 
     <a href="/cart">
-        <button id="btnSaveChanges" class="btn btn-success" style="align-self: center; position: relative; top: 15px; width: 190px; height: 38px;">View Cart</button>
+        <button id="btnSaveChanges" class="btn btn-success" style="align-self: center; position: relative; top: 0px; width: 190px; height: 38px;">View Cart</button>
 
         </a>
 
@@ -32,7 +33,7 @@
     <h2 style="color: #EFFC20">Tshirts:</h2>
     <div class="d-flex flex-wrap justify-content-evenly">
         <% for(let i = 0;i < tshirts.length;i++){ %>
-            <div class="card mb-1 m-1" style="width: 12rem;">
+            <div class="card mb-1 m-1" style="width: 15rem;">
                 <img class="card-img-top p-3" src=<%= tshirts[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
@@ -63,7 +64,7 @@
     <h2 style="color: #EFFC20">Figurines:</h2>
     <div class="d-flex flex-wrap justify-content-evenly">
         <% for(let i = 0;i < figurines.length;i++){ %>
-            <div class="card mb-1 m-1" style="width: 12rem;">
+            <div class="card mb-1 m-1" style="width: 15rem;">
                 <img class="card-img-top p-3" src=<%= figurines[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
