--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Merchandise.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Merchandise.ejs
@@ -37,7 +37,7 @@
                 <img class="card-img-top p-3" src=<%= tshirts[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
-                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title">Title</p>
+                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= tshirts[i].description %></p>
                     <div>
                 <span class="ml-0">
                 </span>
@@ -68,7 +68,7 @@
                 <img class="card-img-top p-3" src=<%= figurines[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
-                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title">Title</p>
+                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%=figurines[i].description%></p>
                     <div>
                 <span class="ml-0">
                 </span>
