--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/cart.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/cart.ejs
@@ -33,7 +33,7 @@
                             <th class="text-center py-3 px-4" style="min-width: 400px;">Product Name &amp; Details</th>
                             <th class="text-right py-3 px-4" style="width: 100px;">Price</th>
 
-                            <th class="text-right py-3 px-4" style="width: 100px;">qauntity</th>
+                            <th class="text-right py-3 px-4" style="width: 100px;">Quantity</th>
                             <th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#" class="shop-tooltip float-none text-light" title="" data-original-title="Clear cart"><i class="ino ion-md-trash"></i></a></th>
                         </tr>
                         </thead>
