--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/index.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/index.ejs
@@ -94,11 +94,11 @@
 
 
         <ul>
-            <div style="float: bottom; width : 50%">
+            <div style="float: bottom;">
                 <h2><a class="home" href="/movielist/top" style="text-decoration-line: none; color:yellow; padding-top: 10%">Top Movies</a></h2>
                 <div class="d-flex flex-wrap justify-content-evenly">
                     <% for(let i = 0;i < moviesList.length;i++){ %>
-                        <div class="card mb-1 m-1" style="width: 12rem;">
+                        <div class="card mb-1 m-1" style="width: 15rem;">
                             <img class="card-img-top p-3" src=<%= moviesList[i].Picture %>
                             alt="Card">
                             <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
