--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
@@ -30,7 +30,7 @@
     <h6>(Showing )</h6>
     <div class="d-flex flex-wrap justify-content-evenly">
         <% for(let i = 0;i < moviesList.length;i++){ %>
-            <div class="card mb-1 m-1" style="width: 15rem;">
+            <div class="card mb-1 m-1" style="width: 17rem;">
                 <img class="card-img-top p-3" src=<%= moviesList[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
@@ -43,7 +43,7 @@
                         <div class="d-grid gap-2">
                             <a href=<%="/movielist/"+moviesList[i].Id+"/details"%> class="btn-warning">
                             <i class="bi bi-book-half"></i>
-                            VIEW Movie
+                            View Movie
                             </a>
                         </div>
                     </div>
