--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Awards.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Awards.ejs
@@ -4,12 +4,17 @@
     <title>My Movie List</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="/css/award.css">
 
 </head>
 <body>
@@ -18,13 +23,23 @@
         <%- include('../partials/header.ejs') %>
     </div>
 
-    <div>
-        <%for(var i = 0; i < awards.length; i++){ %>
-        <ul>
-            <%= awards[i].Award_name + ". " + awards[i].Details %>
-        </ul>
-        <%}%>
+    <div class="d-flex flex-wrap justify-content-evenly">
+        <% for(let i = 0;i < awards.length;i++){ %>
+            <div class="card mb-1 m-1" style="width: 15rem;">
+                <img class="card-img-top p-3" src=<%= awards[i].Picture %>
+                alt="Card">
+                <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
+                    <p style="color: #266dd3;font-weight: 650; font-size: 24px;" class="card-title"><%= awards[i].Award_name %></p>
+                    <div>
+                        <p style="font-family: cursive;"><%= awards[i].Details %></p>
+                    </div>
+                </div>
+            </div>
+        <% } %>
+        <br/>
     </div>
+
 </div>
+
 </body>
 </html>
