--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singlereview.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singlereview.ejs
@@ -86,6 +86,6 @@
 
 <p>
     <%console.log(totalvotes.CNT)%>
-    vote count :<%=myreview.Votes%>
+    vote count :<%=totalvotes.CNT%>
 </p>
 </html>
