--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile2.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile2.ejs
@@ -80,6 +80,12 @@
                                    class="form-control personal p-3 date-of-birth">
                         </div>
 
+                        <div class="mb-3">
+                            <label for="dob" class="form-label pb-1">Your Date of Birth</label>
+                            <input disabled type="date" name="dob" value="<%=userInfo.Date_of_birth%>"
+                                   class="form-control personal p-3 date-of-birth">
+                        </div>
+
                     </div>
                 </div>
                 <hr>
