--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile2.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile2.ejs
@@ -35,15 +35,6 @@
                 </div>
             </div>
         </div>
-        <div class="shadow  mt-3 p-2">
-            <div class="list-group list-group-flush">
-                <a href="/my-section/profile" class="list-group-item list-group-item-action active" aria-current="true">My Account</a>
-                <a href="/my-section/orders" class="list-group-item list-group-item-action ">My Orders</a>
-                <!--                <a href="#" class="list-group-item list-group-item-action">My Lists</a>-->
-                <a href="/my-section/wishlist" class="list-group-item list-group-item-action">My Wishlist</a>
-                <a href="/my-section/reviews" class="list-group-item list-group-item-action">My Ratings and Reviews</a>
-            </div>
-        </div>
     </div>
     <div class="col-9">
         <div class="shadow p-3 mt-3 d-flex justify-content-between">
@@ -81,8 +72,8 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="dob" class="form-label pb-1">Your Date of Birth</label>
-                            <input disabled type="date" name="dob" value="<%=userInfo.Date_of_birth%>"
+                            <label for="dob" class="form-label pb-1">Bio</label>
+                            <input disabled type="bio" name="bio" value="<%=userInfo.Date_of_birth%>"
                                    class="form-control personal p-3 date-of-birth">
                         </div>
 
