--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/directorlist.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/directorlist.ejs
@@ -34,7 +34,7 @@
                 <img class="card-img-top p-3" src=<%= directorlist[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
-                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= directorlist[i].Title %></p>
+                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= directorlist[i].Name %></p>
                     <div>
                 <span class="ml-0">
 
