--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
@@ -64,6 +64,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/directorlist">All directors</a>
                             </li>
+                            <li>
+                                <a class="nav-link" href="/watchlist">WatchList</a>
+                            </li>
 
 
                         </ul>
