--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/watchlist.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/watchlist.ejs
@@ -2,34 +2,63 @@
 <html>
 
 <head>
-    <title>My Anime List</title>
-    <link rel="icon" href="/img/icons/mal-logo-head.png">
-    <link rel="stylesheet" href="/css/styles.css">
-
+    <title>My Movie List</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 
 <body>
-    <div class="main-content">
-        <%- include('../partials/header.ejs') %>
-            <% if(!movies || movies.length==0) { %>
-                <p>No result found</p>
-                <% } else { %>
-                    <ul>
-                        <% for (let movie of animes){ %>
-                            <li> <a class="listed" href=<%="/anime/" + movie.ID %> >
+<div class="main-content" name="movies">
+    <%- include('../partials/header.ejs') %>
+    <h3 style="color: yellow; font-family: cursive;">Movies:</h3>
 
-                                    <%= movie.TITLE %>
-                                </a>
-                                <% if(movie.title) { %>
-                                    <a class="favourited" href=<%="/user/" + username + "/favourites" %>> Favourited!
-                                    </a>
-                                    <% } %>
-                            </li>
-                            <% } %>
-                    </ul>
-                    <% } %>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Movies</li>
+        </ol>
+    </nav>
+
+
+    <h6>(Showing )</h6>
+    <div class="d-flex flex-wrap justify-content-evenly">
+        <% for(let i = 0;i < moviesList.length;i++){ %>
+            <div class="card mb-1 m-1" style="width: 12rem;">
+                <img class="card-img-top p-3" src=<%= moviesList[i].Picture %>
+                alt="Card">
+                <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
+                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= moviesList[i].Title %></p>
+                    <div>
+                <span class="ml-0">
+
+                </span>
+                        <p class="card-text">Released on: <%= moviesList[i].Release_Date %></p>
+                        <div class="d-grid gap-2">
+                            <a href=<%="/movielist/"+moviesList[i].Id+"/details"%> class="btn-warning">
+                                <i class="bi bi-book-half"></i>
+                                VIEW Movie
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <% } %>
+        <br/>
     </div>
-    <%- include('../partials/footer.ejs') %>
+
+
+</div>
+
+
+</div>
+
+<%- include('../partials/footer.ejs') %>
 </body>
 
 </html>
