--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/actorlist.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/actorlist.ejs
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="/css/award.css">
 </head>
 
 <body>
@@ -33,12 +34,10 @@
                 <img class="card-img-top p-3" src=<%= actorlist[i].Picture %>
                 alt="Card">
                 <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
-                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= actorlist[i].Title %></p>
+                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= actorlist[i].Name %></p>
                     <div>
                 <span class="ml-0">
-
                 </span>
-                        <p class="card-text">Released on: <%= actorlist[i].Release_Date %></p>
                         <div class="d-grid gap-2">
                             <a href=<%="/actorlist/"+actorlist[i].SSN+"/details"%> class="btn-warning">
                                 <i class="bi bi-book-half"></i>
