--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singledirector.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singledirector.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -34,17 +35,18 @@
                     <img class="img-thumbnail" src=<%=   directordetails.Picture %>>
                 </div>
                 <div class="col mt-4">
-                    <h3 class=""><%=  directordetails.Description %></h3>
 
-                    <h4>  <%=directordetails.Name%></h4>
+                    <h2 style="font-family: cursive">  <%=directordetails.Name%></h2>
+                    <h5 class="" style="font-family: cursive"><%=   directordetails.Description %></h5>
                     <br/>
-
+                    <h5 style="font-family: cursive"> <%= "Born: " + directordetails.Date_of_Birth %> </h5>
+                    <h5 style="font-family: cursive"> <%= "Notable work: " + directordetails.Notable_work %> </h5>
 
 
                 </div>
             </div>
         </div>
-        <div class="col-3 sidebar-info p-2 bg-light">
+        <!--<div class="col-3 sidebar-info p-2 bg-light">
             <div class="payment-info">
                 <div class="d-flex mt-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="currentColor"
@@ -94,8 +96,7 @@
                     </p>
                 </div>
             </div>
-
-        </div>
+        </div>-->
     </div>
 
 
@@ -104,9 +105,6 @@
         <ul class="nav nav-tabs">
             <li class="nav-item active">
                 <a href="#home" class="nav-link active" data-bs-toggle="tab">Summary</a>
-            </li>
-            <li class="nav-item">
-                <a href="#profile" class="nav-link" data-bs-toggle="tab">Specification</a>
             </li>
             <li class="nav-item">
                 <a href="#messages" class="nav-link" data-bs-toggle="tab">Director</a>
@@ -174,7 +172,7 @@
                 <div class="row justify-items-start p-5">
 
                     <div class="col">
-                        <h3><%=   directordetails.SSN %></h3>
+                        <h4>Director SSN</h4>
                         <div class="pt-2">
                             <%=  directordetails.SSN  %>
                         </div>
